Rollover effects and Footer UI (#1)
* Link and Button rollover effects

* Basic footer UI completed

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -44,7 +44,9 @@
 @colors: {
   white: #fff;
   black: #000;
+  black-light: #212123;
   light-grey: #f0f0f0;
+  blue-dark: #36385A;
   orange: #ff9500;
 }
 
@@ -347,6 +349,7 @@
 * Animations
 *--------------------------*/
 @time: 320ms;
+@time_fast: 240ms;
 @time_slow: 700ms;
 
 @swing: cubic-bezier(0.55, 0, 0.1, 1);
