--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -4,6 +4,7 @@
 
 // Base Utility Classes
 @import "base/variables.less";
+@import "base/mixins.less";
 @import "base/fonts.less";
 @import "base/colors.less";
 @import "base/borders.less";
