--- a/assets/less/base/fonts.less
+++ b/assets/less/base/fonts.less
@@ -4,7 +4,7 @@
 
 body {
     font-family: @base-font;
-    &:extend(.font-base, .tracking-wide);
+    &:extend(.font-base, .tracking-wide, .text-blue-dark);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
