Footer style completed

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -45,9 +45,12 @@
   white: #fff;
   black: #000;
   black-light: #212123;
+  black-lighter: #34343A;
+  black-lightest: #45454B;
   light-grey: #f0f0f0;
   blue-dark: #36385A;
   orange: #ff9500;
+  blue: #0080FF;
 }
 
 /*-------------------------
