--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
     </aside>
-    <aside class="flex flex-col text-right">
+    <aside class="flex flex-1 flex-col text-right">
       <ul class="list-none p-0 flex justify-end">
         <li class="mr-4">
           <a class="social-link font-semibold" title="Follow @mozthunderbird on Twitter"
