--- a/assets/less/base/events.less
+++ b/assets/less/base/events.less
@@ -2,15 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-each(@border-radius, #(@k, @v) {
+each(@pointer-events, #(@k, @v) {
   .@{v} {
-    border-radius: @k;
+    pointer-events: @k;
   }
 });
-
-each(@border-style, #(@k, @v) {
-  .@{v} {
-    border-style: @k;
-  }
-});
-
