--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -19,7 +19,9 @@
 @import "base/sizing.less";
 @import "base/spacing.less";
 @import "base/backgrounds.less";
+@import "base/events.less";
 
 // Custom Components
 @import "components/links.less";
 @import "components/buttons.less";
+@import "components/forms.less";
