--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -4,6 +4,7 @@
 
 a {
  .transition(@transition-default);
+ cursor: pointer;
 }
 
 .nav-link {
@@ -37,4 +38,23 @@ a {
 
 .inline-link {
   &:extend(.font-semibold, .underline, .text-white);
+}
+
+.social-link {
+  &:extend(.ml-1, .mr-1, .text-white, .no-underline, .font-sm, .font-semibold, .flex, .items-center, .bg-black-lightest, .pt-1, .pb-1, .pl-1, .pr-2, .leading-none, .rounded-full);
+
+  span {
+    &:extend(.w-3, .h-3, .p-1, .bg-black-lighter, .rounded-full, .mr-1);
+    .transition(@transition-default);
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &:hover,
+  &:focus {
+    &:extend(.bg-blue);
+  }
 }
