--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -1,7 +1,7 @@
 <footer id="colophon" class="bg-black-light text-white flex flex-col pt-10 pb-8">
   <section class="flex justify-between items-center self-center w-full max-w-6xl pl-4 pr-4">
     <aside class="flex flex-col">
-      <a href="{{ url('thunderbird.index') }}" class="block w-32" title="{{ _('Thunderbird') }}"
+      <a href="{{ url('thunderbird.index') }}" class="block w-40" title="{{ _('Thunderbird') }}"
         alt="{{ _('Thunderbird Vector Wordmark') }}">
         {{ svg('logo-wordmark-white') }}
       </a>
@@ -29,17 +29,22 @@
         </ul>
       </nav>
     </aside>
-    <aside class="flex flex-col text-right">
+    <aside class="flex flex-1 flex-col text-right">
       <ul class="list-none p-0 flex justify-end">
-        <li class="mr-4"><a class="small-link font-semibold" title="Follow @mozthunderbird on Twitter"
-            href="https://twitter.com/mozthunderbird" data-link-type="footer"
-            data-link-name="Twitter (Thunderbird)"><i></i>
-            <div>@mozthunderbird</div>
-          </a></li>
-        <li><a class="small-link font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
-            data-link-name="Facebook (Thunderbird)"><i></i>
-            <div>{{ _('Thunderbird') }}</div>
-          </a></li>
+        <li class="mr-4">
+          <a class="social-link font-semibold" title="Follow @mozthunderbird on Twitter"
+            href="https://twitter.com/mozthunderbird" data-link-type="footer" data-link-name="Twitter (Thunderbird)">
+            <span>{{ svg('twitter') }}</span>
+            @mozthunderbird
+          </a>
+        </li>
+        <li>
+          <a class="social-link font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
+            data-link-name="Facebook (Thunderbird)">
+            <span>{{ svg('facebook') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
       </ul>
       <aside class="mt-2">
         {% include '_includes/lang_switcher.html' %}
@@ -65,7 +70,7 @@
         </li>
     </ul>
 
-    <p class="mt-6 mb-6">
+    <p class="mt-6 mb-6 leading-normal">
       {%- trans url=url('foundation.licensing.website-content') -%}
       Portions of this content are ©1998–{{ current_year }} by individual
       mozilla.org contributors. Content available under
