--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -14,7 +14,12 @@
   grey-light: #f0f0f0;
   blue-dark: #36385A;
   orange: #ff9500;
+  blue-lightest: #B2D9FF;
   blue: #0080FF;
+  blue-dark: #245CAD;
+  blue-darker: #36385A;
+  green: #058B00;
+  green-light: #11AD00;
 }
 
 /*-------------------------
@@ -260,6 +265,7 @@
   font-md: 15px;
   font-lg: 17px;
   font-xl: 19px;
+  font-2xl: 21px;
   font-hero: 59px;
 }
 
