--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -25,3 +25,4 @@
 @import "components/links.less";
 @import "components/buttons.less";
 @import "components/forms.less";
+@import "components/headings.less";
