--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -58,6 +58,26 @@ button {
   }
 }
 
+.btn-body {
+  &:extend(.relative, .text-green, .font-sm, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-5, .pr-9, .rounded-xs, .border-green-light);
+  border-style: solid;
+  border-width: 1px;
+
+  span {
+    &:extend(.absolute, .flex, .items-center, .w-2, .pin-r, .pin-t, .pin-b, .pr-4);
+
+    svg {
+      &:extend(.w-2);
+    }
+  }
+
+  &:hover,
+  &:focus {
+    &:extend(.shadow-md);
+    .transform(translateY(-7%));
+  }
+}
+
 .btn-inline {
   &:extend(.rounded-sm, .border-none, .bg-grey-light, .text-black, .p-1, .pl-2, .pr-2, .ml-2);
   -moz-appearance: none;
