--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -262,6 +262,7 @@
   font-base: 13px;
   font-xs: 9px;
   font-sm: 11px;
+  font-regular: 12px;
   font-md: 15px;
   font-lg: 17px;
   font-xl: 19px;
