--- a/website/_includes/download-button.html
+++ b/website/_includes/download-button.html
@@ -34,7 +34,7 @@
   <p class="linux-arm-download mb-8">
     {{ _('Please follow <a href="%(url)s" class=\"inline-link\">these instructions</a> to install Thunderbird.')|format(url='https://support.mozilla.org/kb/installing-thunderbird-linux') }}
   </p>
-  <ul class="download-list list-none p-0 flex flex-wrap max-w-lg justify-center">
+  <ul class="download-list list-none p-0 flex flex-wrap max-w-lg justify-center mb-0">
     {% for plat in builds %}
       <li class="os_{{ plat.os }}{% if plat.arch %} {{ plat.arch }}{% endif %} ml-3 mr-3">
         <a class="download-link btn-download"
@@ -58,7 +58,7 @@
       </li>
     {% endfor %}
   </ul>
-  <p class="download-other download-other-desktop os_linux os_linux64 os_osx os_win os_winsha1 font-sm tracking-wider">
+  <p class="download-other download-other-desktop os_linux os_linux64 os_osx os_win os_winsha1 font-sm tracking-wider mt-0">
     <a href="{{ thunderbird_url('all', channel) }}" class="small-link">{{ _('Systems &amp; Languages') }}</a> &bull;
     {% if channel != 'alpha' %}{# Earlybird release notes are not available yet #}
       <a href="{{ thunderbird_url('releasenotes', channel) }}" class="small-link">{{ _('What’s New') }}</a> &bull;
