--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -183,6 +183,31 @@
   border-none: none;
 }
 
+@border: {
+  border: 1px;
+  border-0: 0;
+}
+
+@border-top: {
+  border-t: 1px;
+  border-t-0: 0;
+}
+
+@border-right: {
+  border-r: 1px;
+  border-r-0: 0;
+}
+
+@border-bottom: {
+  border-b: 1px;
+  border-b-0: 0;
+}
+
+@border-left: {
+  border-l: 1px;
+  border-l-0: 0;
+}
+
 /*-------------------------
 * FlexBox
 *--------------------------*/
