--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -40,7 +40,7 @@
               <a href="{{ url('thunderbird.about') }}" class="nav-link">{{_('About Us')}}</a>
             </li>
             <li>
-              <a href="{{ url('blog') }}" class="nav-link">{{_('Blog')}}</a>
+              <a href="{{ url('blog') }}" class="nav-link" target="_blank">{{_('Blog')}}</a>
             </li>
             <li>
               <a href="{{ donate_url('header') }}" class="btn-donate">
