--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -59,7 +59,7 @@ button {
 }
 
 .btn-body {
-  &:extend(.relative, .text-green, .font-regular, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-5, .pr-9, .rounded-xs, .border-green-light, .rounded-sm);
+  &:extend(.relative, .bg-white, .text-green, .font-regular, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-5, .pr-9, .rounded-xs, .border-green-light, .rounded-sm);
   border-style: solid;
   border-width: 1px;
 
