--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -12,6 +12,7 @@
   black-lighter: #34343A;
   black-lightest: #45454B;
   grey-light: #f0f0f0;
+  grey-lighter: #fdfdfd;
   blue-dark: #36385A;
   orange: #ff9500;
   blue-lightest: #B2D9FF;
