--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -43,7 +43,7 @@
               <a href="{{ url('blog') }}" class="nav-link" target="_blank">{{_('Blog')}}</a>
             </li>
             <li>
-              <a href="{{ donate_url('header') }}" class="btn-donate">
+              <a href="{{ donate_url('header') }}" class="btn-donate" target="_blank">
                 <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
               </a>
             </li>
