Add content to Home page. (#118)
* Ignore macos hidden files

* Align logo and nav with flexbox

* Fix flexbox menu for all pages and RTL variation

* Ignore macos hidden files

* Values area

* Tigther hero area

* Blog section

* Donations, newsletter, and prefooter section completed

* beta link fixed for prefooter

* Remove inline mailchimp script

* Replace escaped apostrophes with unicode

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -12,9 +12,15 @@
   black-lighter: #34343A;
   black-lightest: #45454B;
   grey-light: #f0f0f0;
+  grey-lighter: #fdfdfd;
   blue-dark: #36385A;
   orange: #ff9500;
+  blue-lightest: #B2D9FF;
   blue: #0080FF;
+  blue-dark: #245CAD;
+  blue-darker: #36385A;
+  green: #058B00;
+  green-light: #11AD00;
 }
 
 /*-------------------------
@@ -178,6 +184,31 @@
   border-none: none;
 }
 
+@border: {
+  border: 1px;
+  border-0: 0;
+}
+
+@border-top: {
+  border-t: 1px;
+  border-t-0: 0;
+}
+
+@border-right: {
+  border-r: 1px;
+  border-r-0: 0;
+}
+
+@border-bottom: {
+  border-b: 1px;
+  border-b-0: 0;
+}
+
+@border-left: {
+  border-l: 1px;
+  border-l-0: 0;
+}
+
 /*-------------------------
 * FlexBox
 *--------------------------*/
@@ -257,9 +288,11 @@
   font-base: 13px;
   font-xs: 9px;
   font-sm: 11px;
+  font-regular: 12px;
   font-md: 15px;
   font-lg: 17px;
   font-xl: 19px;
+  font-2xl: 21px;
   font-hero: 59px;
 }
 
