Whats New Page (#3)
* Align logo and nav with flexbox

* Fix flexbox menu for all pages and RTL variation

* Calendar section (#2)

* Download button beta veriation

* Calendar section

* Build whats-new page

* Links and style updates

* Whatsnew page with placeholder images

--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -34,6 +34,14 @@ each(@background-size, #(@k, @v) {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1c2f56', endColorstr='#2c9afe', GradientType=0);
 }
 
+.bg-header-page {
+  background-color: #1c2f56;
+  background-image: url('../img/thunderbird/backgrounds/bg-header.png'), -moz-linear-gradient(top, #1c2f56 0%, #037ae6 100%);
+  background-image: url('../img/thunderbird/backgrounds/bg-header.png'), -webkit-linear-gradient(top, #1c2f56 0%, #037ae6 100%);
+  background-image: url('../img/thunderbird/backgrounds/bg-header.png'), linear-gradient(to bottom, #1c2f56 0%, #037ae6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1c2f56', endColorstr='#037ae6', GradientType=0);
+}
+
 .bg-donate-button {
   background: #b92f51;
   background: -moz-linear-gradient(-45deg, #f23d5c 0%, #b92f51 100%);
