--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -6,6 +6,7 @@
 * Colours
 *--------------------------*/
 @colors: {
+  transparent: transparent;
   white: #fff;
   black: #000;
   black-light: #212123;
