--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -76,6 +76,10 @@ button {
     &:extend(.shadow-md);
     .transform(translateY(-7%));
   }
+
+  &.btn-secondary {
+    &:extend(.text-blue, .border-transparent, .bg-transparent, .normal-case);
+  }
 }
 
 .btn-inline {
