Add Features apge

--- a/assets/less/components/headings.less
+++ b/assets/less/components/headings.less
@@ -16,3 +16,12 @@
     }
   }
 }
+
+.header-line {
+  &:extend(.block, .bg-blue-lightest);
+  height: 1px;
+}
+
+.subheader-section {
+  &:extend(.mt-0, .mb-4, .font-lg, .text-blue-dark, .leading-normal);
+}
