--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -53,20 +53,20 @@
   </section>
   <section class="self-center text-center max-w-xl mt-8">
     <ul class="list-none p-0 flex justify-center">
-      <li>
-        <a href="{{ url('privacy') }}" class="small-link mr-3 ml-3" data-link-type="footer" data-link-name="Privacy" target="_blank">{{ _('Privacy') }}</a>
+      <li class="ml-2 mr-2">
+        <a href="{{ url('privacy') }}" class="small-link" data-link-type="footer" data-link-name="Privacy" target="_blank">{{ _('Privacy') }}</a>
       </li>
-      <li>
-        <a href="{{ url('privacy.notices.websites') }}#cookies" class="small-link mr-3 ml-3" data-link-type="footer" data-link-name="Cookies" target="_blank">{{ _('Cookies') }}</a>
-        </li>
-      <li>
-        <a href="{{ url('legal.index') }}" class="small-link mr-3 ml-3" data-link-type="footer"
+      <li class="ml-2 mr-2">
+        <a href="{{ url('privacy.notices.websites') }}#cookies" class="small-link" data-link-type="footer" data-link-name="Cookies" target="_blank">{{ _('Cookies') }}</a>
+      </li>
+      <li class="ml-2 mr-2">
+        <a href="{{ url('legal.index') }}" class="small-link" data-link-type="footer"
           data-link-name="Legal" target="_blank">{{ _('Legal') }}</a>
-        </li>
-      <li>
-        <a href="{{ url('legal.fraud-report') }}" class="small-link mr-3 ml-3" data-link-type="footer"
+      </li>
+      <li class="ml-2 mr-2">
+        <a href="{{ url('legal.fraud-report') }}" class="small-link" data-link-type="footer"
           data-link-name="Report Trademark Abuse" target="_blank">{{ _('Report Trademark Abuse') }}</a>
-        </li>
+      </li>
     </ul>
 
     <p class="mt-6 mb-6 leading-normal">
