--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -9,6 +9,7 @@
   transparent: transparent;
   white: #fff;
   black: #000;
+  black-25: rgba(0, 0, 0, 0.25);
   black-light: #212123;
   black-lighter: #34343A;
   black-lightest: #45454B;
